--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Apple</title>
+    <title>Not Apple</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      
+    </div>   
   </body>
 </html>
